# chatbot

./: README.md  requirements.txt
simple_chatbot/: .gitignore  README.md  demo_chatbot.py  pyproject.toml
simple_chatbot/tests/: test_demo_chatbot.py
