[tool.poetry]
name = "simple-chatbot"
version = "0.1.0"
description = ""
authors = ["viviane-walker-uzh <viviane.walker@uzh.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.42.0"
transformers = "^4.44.2"
torch = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
